# magpie

./: .gitignore  ADVANCED.md  CONFIG.md  LICENSE.md  README.md  TODO.md  USAGE.md  magpie.py  pyproject.toml  setup.cfg  setup.py
docs/: CHANGELOG.md  TODO.md  algoconfig.md  guide.md  scenario.md  tuto_1_get_started.md  tuto_2_overview.md  tuto_3_entry_points.md  tuto_4_scenarios.md  tuto_5_fitness_functions.md  tutorial.md
docs/explanation/: project_structure.md
docs/explanations/: codebase.md  output.md  pipeline.md  project_structure.md
docs/howto/: custom_fitness_function.md
docs/tutorials/: search.md  (+3 more)
example/: improve_java.py  improve_python.py  improve_xml.py  repair_java.py  repair_java2.py  repair_python.py
examples/: magpie_astor_runtime.py  magpie_bloat2.py  magpie_config_minisat.py  magpie_repair_xml_java.py  magpie_runtime_xml.py  triangle_java_repair.txt  triangle_python_runtime.txt  triangle_repair.txt
examples/code/triangle-cpp_bug/: CMakeLists.txt  setup.sh  test_triangle.cpp  triangle.cpp  triangle.cpp.xml
magpie/: __init__.py  __main__.py  config.py  settings.py
pyggi/: __init__.py
test/: test_astorengine.py  test_edit.py  test_lineengine.py  test_model_astor.py  test_model_line.py  test_model_xml.py  test_patch.py  test_program.py  test_srcmlengine.py  test_utils_clear.py  test_utils_python.py  test_xmlengine.py  util.py
tests/: test_astormodel.py  test_edit.py  test_model_line.py  test_model_srcml.py  test_model_xml.py  test_patch.py  test_python_to_xml.py  test_software.py
utils/: clear_xml.py  python_to_xml.py  test_python_to_xml.py
(+323 files in other folders)
